--- a/.github/workflows/app_up.yml
+++ b/.github/workflows/app_up.yml
@@ -7,7 +7,7 @@ on:
       - feat/create-infra-terraform
     paths:
       - ".github/workflows/app_up.yml"
-      - "infra/**"
+      - "terraform/**"
 
 env:
   TERRAFORM_VERSION: "1.4.4"
@@ -19,7 +19,7 @@ jobs:
     environment: production
     defaults:
       run:
-        working-directory: infra
+        working-directory: terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v3
